# lazycurl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json  settings.local.json
.claude/commands/: release.md  verify-rust.md
.github/workflows/: ci.yml  release.yml
crates/curl-tui/: Cargo.toml
crates/curl-tui-core/: Cargo.toml
crates/curl-tui-core/src/: collection.rs  command.rs  config.rs  environment.rs  history.rs  init.rs  lib.rs  migration.rs  project.rs  secret.rs  types.rs  variable.rs
crates/curl-tui-core/tests/: integration_test.rs
crates/curl-tui/src/: app.rs  events.rs  input.rs  main.rs  text_input.rs
crates/curl-tui/src/ui/: collections.rs  environment_manager.rs  help.rs  layout.rs  mod.rs  picker.rs  project_picker.rs  project_tabs.rs  request.rs  response.rs  statusbar.rs  variables.rs
crates/lazycurl/: Cargo.toml
crates/lazycurl-core/: Cargo.toml
crates/lazycurl-core/src/: asap.rs  aws_v4.rs  command.rs  config.rs  export.rs  history.rs  init.rs  lib.rs  logging.rs  migration.rs  oauth1.rs  oauth2.rs  project.rs  secret.rs  types.rs  variable.rs
crates/lazycurl-core/tests/: integration_test.rs
crates/lazycurl/src/: app.rs  events.rs  input.rs  main.rs
crates/lazycurl/src/handlers/: confirmations.rs  log_viewer.rs  main_dispatch.rs  mod.rs  pickers.rs  variables.rs
crates/lazycurl/src/ui/: collections.rs  environment_manager.rs  export_picker.rs  help.rs  layout.rs  log_viewer.rs  mod.rs  picker.rs  project_picker.rs  request.rs  response.rs  statusbar.rs  variables.rs
docs/superpowers/plans/: 2026-03-22-curl-tui-implementation.md  2026-03-22-interactive-features.md  2026-03-24-environment-improvements.md  2026-03-24-project-layer-implementation.md  2026-03-25-environment-manager.md
docs/superpowers/specs/: 2026-03-22-curl-tui-design.md  2026-03-24-environment-improvements-design.md  2026-03-24-environment-manager-design.md  2026-03-24-project-layer-design.md
