[workspace]
members = ["crates/lazycurl-core", "crates/lazycurl"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Luca Muroni"]
license = "MIT"
repository = "https://github.com/lucamuroni2000/lazycurl"
keywords = ["api", "http", "cli", "tui", "curl"]
categories = ["command-line-utilities", "web-programming::http-client"]
