[package]
name = "curl-tui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tempfile = "3"

[dev-dependencies]
