[package]
name = "lazycurl-core"
description = "Core library for lazycurl — HTTP request building, variable resolution, and collection management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tempfile = "3"

[dev-dependencies]
