[package]
name = "lazycurl-core"
description = "Core library for lazycurl — HTTP request building, variable resolution, and collection management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tempfile = "3"
log = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
url = "2"

[dev-dependencies]
