[package]
name = "lazycurl"
version = "0.1.0"
edition = "2021"

[dependencies]
lazycurl-core = { path = "../lazycurl-core" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1"
