[package]
name = "lazycurl"
description = "Terminal-native API client — a lightweight alternative to Postman"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lazycurl-core = { version = "0.4.0", path = "../lazycurl-core" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1"
log = "0.4"
simplelog = "0.12"
arboard = "3"
